Everything works so well! Time for a grocery list

--- a/frontend/src/components/Cards/RecipeCard/RecipeCard.scss
+++ b/frontend/src/components/Cards/RecipeCard/RecipeCard.scss
@@ -27,6 +27,8 @@
 .RecipeCard_header {
   font-size: 1.4rem;
   font-weight: bold;
+  height: 2.8rem;
+  padding-bottom: 0.5rem;
 }
 .RecipeCard_subheader {
   font-size: 0.9rem;
