--- a/frontend/src/components/Cards/RecipeCard/RecipeCard.css
+++ b/frontend/src/components/Cards/RecipeCard/RecipeCard.css
@@ -20,7 +20,9 @@
 
 .RecipeCard_header {
   font-size: 1.4rem;
-  font-weight: bold; }
+  font-weight: bold;
+  height: 2.8rem;
+  padding-bottom: 0.5rem; }
 
 .RecipeCard_subheader {
   font-size: 0.9rem;
